<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/iv_detail_thumb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_thumb"/>

    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/headline"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_headline"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_cal_title"
                app:layout_constraintEnd_toStartOf="@id/tv_carbos"/>

            <TextView
                android:id="@+id/tv_cal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                app:layout_constraintStart_toStartOf="@id/tv_cal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cal"
                app:layout_constraintEnd_toEndOf="@id/tv_cal"/>

            <TextView
                android:id="@+id/tv_carbos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbos"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_fat"
                app:layout_constraintStart_toEndOf="@id/tv_cal"
                app:layout_constraintBottom_toTopOf="@id/tv_carbos_title"/>

            <TextView
                android:id="@+id/tv_carbos_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbos"
                app:layout_constraintEnd_toEndOf="@id/tv_carbos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_carbos"
                app:layout_constraintStart_toStartOf="@id/tv_carbos"/>

            <TextView
                android:id="@+id/tv_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_carbos"
                app:layout_constraintEnd_toStartOf="@id/tv_protein"
                app:layout_constraintBottom_toTopOf="@id/tv_fat_title"/>

            <TextView
                android:id="@+id/tv_fat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                app:layout_constraintTop_toBottomOf="@id/tv_fat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_fat"
                app:layout_constraintEnd_toEndOf="@id/tv_fat"/>

            <TextView
                android:id="@+id/tv_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_fat"
                app:layout_constraintBottom_toTopOf="@id/tv_protein_title"/>

            <TextView
                android:id="@+id/tv_protein_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_protein"
                app:layout_constraintTop_toBottomOf="@id/tv_protein"
                app:layout_constraintStart_toStartOf="@id/tv_protein"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail_sub"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_title"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/tv_difficult"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_time_title"/>

            <TextView
                android:id="@+id/tv_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_title"
                app:layout_constraintEnd_toEndOf="@id/tv_time"
                app:layout_constraintStart_toStartOf="@id/tv_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_time"/>

            <TextView
                android:id="@+id/tv_difficult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_time"
                app:layout_constraintBottom_toTopOf="@id/tv_difficult_title"/>

            <TextView
                android:id="@+id/tv_difficult_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult"
                app:layout_constraintEnd_toEndOf="@id/tv_difficult"
                app:layout_constraintStart_toStartOf="@id/tv_difficult"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_difficult"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>